IGNITE-15264 Fixed wrong applied revision handling in DistributedConfigurationStorage
Signed-off-by: ibessonov <bessonov.ip@gmail.com>